Added address to profile.

--- a/src/Club/UserBundle/Resources/views/User/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/User/index.html.twig
@@ -43,6 +43,9 @@
         <a href="{{ path('user_ticket', { 'id':user.id }) }}">Ticket</a>
         <a href="{{ path('user_shop', { 'id':user.id }) }}">Shop as</a>
         <a href="{{ path('user_ban', { 'id':user.id }) }}">Ban</a>
+        <a href="{{ path('user_address', { 'id':user.id }) }}">Address</a>
+        <a href="{{ path('user_phone', { 'id':user.id }) }}">Phone</a>
+        <a href="{{ path('user_email', { 'id':user.id }) }}">Email</a>
       </td>
     </tr>
   {% else %}
