--- a/src/Club/UserBundle/Resources/views/User/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/User/index.html.twig
@@ -46,6 +46,7 @@
         <a href="{{ path('user_address', { 'id':user.id }) }}">Address</a>
         <a href="{{ path('user_phone', { 'id':user.id }) }}">Phone</a>
         <a href="{{ path('user_email', { 'id':user.id }) }}">Email</a>
+        <a href="{{ path('user_group', { 'id':user.id }) }}">Group</a>
       </td>
     </tr>
   {% else %}
