--- a/src/Club/UserBundle/Resources/views/Group/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Group/index.html.twig
@@ -35,7 +35,7 @@
     <tr>
       <td><input type="checkbox" /></td>
       <td>{{ group.id }}</td>
-      <td>{{ group.groupName }}</td>
+      <td>{{ group.groupName }} ( {{ group.users|length }} )</td>
       <td>
         {% include "::edit_link.html.twig" with {'url':path('admin_group_edit', { 'id':group.id })} %}
         {% include "::delete_link.html.twig" with {'url':path('admin_group_delete', { 'id':group.id })} %}
