--- a/src/Club/ShopBundle/Resources/views/AdminOrder/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/index.html.twig
@@ -42,6 +42,7 @@
       <td>{{ order.createdAt|date('Y-m-d') }}</td>
       <td>
         {% include "::edit_link.html.twig" with {'url':path('admin_shop_order_edit', { 'id':order.id })} %}
+        {% include "::delete_link.html.twig" with {'url':path('admin_shop_order_delete', { 'id':order.id })} %}
       </td>
     </tr>
   {% else %}
