--- a/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
@@ -15,8 +15,28 @@
 <p>{{ order.paymentMethod }}</p>
 
 <h2>Order history</h2>
-{% for status in order.orderStatusHistory %}
-{% endfor %}
+<table>
+  <thead>
+    <tr>
+      <th>Date</th>
+      <th>Order status</th>
+      <th>Note</th>
+    </tr>
+  </thead>
+  <tfoot>
+    <tr>
+      <th colspan="3">&#160;</th>
+    </tr>
+  </tfoot>
+  <tbody>
+  {% for status in order.orderStatusHistory %}
+    <tr>
+      <td>{{ status.createdAt|date('Y-m-d H:i:s') }}</td>
+      <td>{{ status.orderStatus.statusName }}</td>
+      <td>{{ status.note }}</td>
+  {% endfor %}
+  </tbody>
+</table>
 
 <form method="post" action="{{ path('admin_shop_order_edit', {'id':order.id}) }}">
 {% include "ClubShopBundle:AdminOrder:form.html.twig" with {'form': form} %}
