--- a/src/Club/ShopBundle/Resources/views/AdminProductAttribute/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProductAttribute/index.html.twig
@@ -2,8 +2,8 @@
 
 {% block body %}
 
-<h1>Product</h1>
-<p class="box"><a href="{{ path('admin_shop_product_new') }}" class="btn-create"><span>Create product</span></a></p>
+<h1>Product attributes</h1>
+<p class="box"><a href="{{ path('admin_shop_product_attribute_new', {'id':product.id}) }}" class="btn-create"><span>Create product</span></a></p>
 
 {% include "::flash.html.twig" %}
 
@@ -13,13 +13,14 @@
     <tr>
       <th>[x]</th>
       <th>Id</th>
-      <th>Product</th>
+      <th>Attribute</th>
+      <th>Value</th>
       <th>Actions</th>
     </tr>
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="4" class="arrow-01">
+      <td colspan="5" class="arrow-01">
         <select name="" class="input-text">
           <option value="">Delete selected</option>
           <option value="">Remove selected</option>
@@ -30,20 +31,20 @@
     </tr>
   </tfoot>
   <tbody>
-  {% for product in products %}
+  {% for attr in product.productAttributes %}
     <tr>
       <td><input type="checkbox" /></td>
-      <td>{{ product.id }}</td>
-      <td>{{ product.productName }}</td>
+      <td>{{ attr.id }}</td>
+      <td>{{ attr.attribute.attributeName }}</td>
+      <td>{{ attr.value }}</td>
       <td>
-        {% include "::edit_link.html.twig" with {'url':path('admin_shop_product_edit', { 'id':product.id })} %}
-        {% include "::delete_link.html.twig" with {'url':path('admin_shop_product_delete', { 'id':product.id })} %}
-        <a href="{{ path('admin_shop_product_attribute', {'id':product.id}) }}">Attributes</a>
+        {% include "::edit_link.html.twig" with {'url':path('admin_shop_product_attribute_edit', { 'id':attr.id })} %}
+        {% include "::delete_link.html.twig" with {'url':path('admin_shop_product_attribute_delete', { 'id':attr.id })} %}
       </td>
     </tr>
   {% else %}
   <tr>
-    <td colspan="4">There are no products at the time</td>
+    <td colspan="5">There are no product attributes for this product</td>
   </tr>
   {% endfor %}
   </tbody>
