--- a/src/Club/ShopBundle/Resources/views/AdminProductAttribute/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProductAttribute/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
 <h1>Product attributes</h1>
-<p class="box"><a href="{{ path('admin_shop_product_attribute_new', {'id':product.id}) }}" class="btn-create"><span>Create product</span></a></p>
+<p class="box"><a href="{{ path('admin_shop_product_attribute_new', {'id':product.id}) }}" class="btn-create"><span>Create attribute</span></a></p>
 
 {% include "::flash.html.twig" %}
 
