--- a/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/edit.html.twig
@@ -4,14 +4,36 @@
 <h1>Order</h1>
 
 <h2>Customer</h2>
-<p>Name: meh ;)</p>
+<p>Company: {{ order.customerAddress.companyName }}<br />
+CVR: {{ order.customerAddress.companyName }}<br />
+Name: {{ order.customerAddress.firstName }} {{ order.customerAddress.lastName }}<br />
+Street: {{ order.customerAddress.street }}<br />
+Suburl: {{ order.customerAddress.suburl }}<br />
+Postal: {{ order.customerAddress.postalCode }}<br />
+City: {{ order.customerAddress.city }}<br />
+Country: {{ order.customerAddress.country }}</p>
 
 <h2>Shipping</h2>
-<p>Name: meeh ;)</p>
+<p>Company: {{ order.shippingAddress.companyName }}<br />
+CVR: {{ order.shippingAddress.companyName }}<br />
+Name: {{ order.shippingAddress.firstName }} {{ order.shippingAddress.lastName }}<br />
+Street: {{ order.shippingAddress.street }}<br />
+Suburl: {{ order.shippingAddress.suburl }}<br />
+Postal: {{ order.shippingAddress.postalCode }}<br />
+City: {{ order.shippingAddress.city }}<br />
+Country: {{ order.shippingAddress.country }}</p>
 <p>{{ order.shipping }}</p>
 
 <h2>Billing</h2>
-<p>Name: meeeh ;)</p>
+
+<p>Company: {{ order.billingAddress.companyName }}<br />
+CVR: {{ order.billingAddress.companyName }}<br />
+Name: {{ order.billingAddress.firstName }} {{ order.billingAddress.lastName }}<br />
+Street: {{ order.billingAddress.street }}<br />
+Suburl: {{ order.billingAddress.suburl }}<br />
+Postal: {{ order.billingAddress.postalCode }}<br />
+City: {{ order.billingAddress.city }}<br />
+Country: {{ order.billingAddress.country }}</p>
 <p>{{ order.paymentMethod }}</p>
 
 <h2>Order history</h2>
