--- a/src/Club/ShopBundle/Resources/views/Checkout/cart_form.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/cart_form.html.twig
@@ -11,9 +11,9 @@
   {% for item in cart.cartProducts %}
   <tr>
     <td>{{ item.productName }}</td>
-    <td>{{ item.price }}</td>
+    <td>{{ item.vatPrice }}</td>
     <td>{{ item.quantity }}</td>
-    <td>{{ item.quantity*item.price }}</td>
+    <td>{{ item.vatSummary }}</td>
   </tr>
   {% else %}
   <tr>
@@ -26,16 +26,8 @@
     <td colspan="4">&#160;</td>
   </tr>
   <tr>
-    <td style="text-align: right; padding-right: 20px;" colspan="3">Sub total</td>
-    <td>{{ cart.price }}</td>
-  </tr>
-  <tr>
-    <td style="text-align: right; padding-right: 20px;" colspan="3">VAT</td>
-    <td>0%</td>
-  </tr>
-  <tr>
     <td style="text-align: right; padding-right: 20px;" colspan="3"><b>Total</b></td>
-    <td>{{ cart.price }}</td>
+    <td>{{ cart.vatPrice }}</td>
   </tr>
   </tfoot>
 </table>
