--- a/app/Resources/views/left_menu.html.twig
+++ b/app/Resources/views/left_menu.html.twig
@@ -1,5 +1,5 @@
 <ul class="box">
-  <li><a href="{{ path('user') }}">User</a>
+  <li><a href="{{ path('admin_user') }}">User</a>
     <ul>
       <li><a href="{{ path('ban') }}">Ban</a></li>
     </ul>
