--- a/src/Club/UserBundle/Resources/views/AdminUser/subscription.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/subscription.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-{% include "ClubUserBundle:User:subscription_table.html.twig" with {'user': user} %}
-{% include "ClubUserBundle:User:ticket_coupon_table.html.twig" with {'user': user} %}
+{% include "ClubUserBundle:AdminUser:subscription_table.html.twig" with {'user': user} %}
+{% include "ClubUserBundle:AdminUser:ticket_coupon_table.html.twig" with {'user': user} %}
 
 {% endblock %}
