--- a/src/Club/UserBundle/Resources/views/AdminUser/group.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/group.html.twig
@@ -3,8 +3,8 @@
 {% block body %}
 <h1>{{ user.profile.name }}</h1>
 
-<form method="post" action="{{ path('user_group', {'id': user.id}) }}">
-{% include "ClubUserBundle:User:form.html.twig" with {'form': form} %}
+<form method="post" action="{{ path('admin_user_group', {'id': user.id}) }}">
+{% include "ClubUserBundle:AdminUser:form.html.twig" with {'form': form} %}
 </form>
 
 {% endblock %}
