--- a/src/Club/UserBundle/Resources/views/AdminUser/ticket_coupon_table.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/ticket_coupon_table.html.twig
@@ -20,7 +20,7 @@
       <td>{{ ticket.startDate|date('Y-m-d') }}</td>
       <td>{{ ticket.expireDate|date('Y-m-d') }}</td>
       <td><ul>
-        <li><a href="{{ path('user_ticket_expire', {'id':ticket.id}) }}">Cancel</a></li>
+        <li><a href="{{ path('admin_user_ticket_expire', {'id':ticket.id}) }}">Cancel</a></li>
         <li><a href="#">Pause</a></li>
       </ul></td>
     </tr>
