--- a/app/Resources/views/top_menu.html.twig
+++ b/app/Resources/views/top_menu.html.twig
@@ -5,5 +5,6 @@
 <ul class="box">
   <li {% if app.request.attributes.get('_route') == 'user' %} id="menu-active"{% endif %}><a href="{{ path('user') }}"><span>User</span></a></li>
   <li {% if app.request.attributes.get('_route') == 'shop' %} id="menu-active"{% endif %}><a href="{{ path('shop') }}"><span>Shop</span></a></li>
+  <li {% if app.request.attributes.get('_route') == 'order' %} id="menu-active"{% endif %}><a href="{{ path('shop_order') }}"><span>Order</span></a></li>
 </ul>
 
