Removed roles from products.

--- a/app/Resources/views/left_menu.html.twig
+++ b/app/Resources/views/left_menu.html.twig
@@ -1,9 +1,5 @@
 <ul class="box">
-  <li><a href="{{ path('admin_user') }}">User</a>
-    <ul>
-      <li><a href="{{ path('ban') }}">Ban</a></li>
-    </ul>
-  </li>
+  <li><a href="{{ path('admin_user') }}">User</a></li>
   <li><a href="{{ path('mail') }}">Mail</a></li>
   <li><a href="{{ path('shop') }}">Shop</a>
     <ul>
@@ -23,6 +19,7 @@
       <li><a href="{{ path('admin_role') }}">Role</a></li>
       <li><a href="{{ path('admin_currency') }}">Currency</a></li>
       <li><a href="{{ path('admin_language') }}">Language</a></li>
+      <li><a href="{{ path('ban') }}">Ban</a></li>
     </ul>
   </li>
 </ul>
