--- a/src/Club/ShopBundle/Resources/views/Subscription/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/index.html.twig
@@ -2,6 +2,8 @@
 
 {% block body %}
 
+<h1>Subscriptions</h1>
+
 {% include "ClubShopBundle:Subscription:subscription_table.html.twig" with {'user': user} %}
 {% include "ClubShopBundle:Subscription:ticket_coupon_table.html.twig" with {'user': user} %}
 
