--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -1,5 +1,30 @@
 {% extends "::base.html.twig" %}
 
+{% block search %}
+<!-- Search -->
+<form action="#" method="get" id="search">
+  <fieldset>
+    <legend>Search</legend>
+
+    <p><input type="text" size="17" name="" class="input-text" />&nbsp;<input type="submit" value="OK" class="input-submit-02" /><br />
+    <a href="javascript:toggle('search-options');" class="ico-drop">Advanced search</a></p>
+
+    <!-- Advanced search -->
+    <div id="search-options" style="display:none;">
+
+      <p>
+        <label><input type="checkbox" name="" checked="checked" /> Option I.</label><br />
+        <label><input type="checkbox" name="" /> Option II.</label><br />
+        <label><input type="checkbox" name="" /> Option III.</label>
+      </p>
+
+    </div> <!-- /search-options -->
+
+  </fieldset>
+</form>
+
+{% endblock %}
+
 {% block body %}
 <h1>User</h1>
 <p class="box"><a href="{{ path('admin_user_new') }}" class="btn-create"><span>Create user</span></a></p>
