Improved design with some headers.

--- a/src/Club/UserBundle/Resources/views/AdminUser/subscription.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/subscription.html.twig
@@ -2,6 +2,8 @@
 
 {% block body %}
 
+<h1>Subscriptions</h1>
+
 {% include "ClubUserBundle:AdminUser:subscription_table.html.twig" with {'user': user} %}
 {% include "ClubUserBundle:AdminUser:ticket_coupon_table.html.twig" with {'user': user} %}
 
