--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -83,11 +83,11 @@
 
                                 {% block search %}
                                 <!-- Search -->
-                                <form action="{{ path('admin_user') }}" method="post" id="search">
+                                <form action="{{ path('admin_user_filter') }}" method="post" id="search">
                                         <fieldset>
                                                 <legend>Search</legend>
 
-                                                <p><input type="text" size="17" name="" class="input-text" />&nbsp;<input type="submit" value="OK" class="input-submit-02" /><br />
+                                                <p><input type="text" size="17" name="name" class="input-text" />&nbsp;<input type="submit" value="OK" class="input-submit-02" /><br />
                                         </fieldset>
                                 </form>
 
