Add current location to frontpage.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -51,7 +51,7 @@
                           <a href="#" rel="2col" class="styleswitch ico-col2" title="Display two columns"><img src="{{ asset('images/switcher-2col.gif') }}" alt="2 Columns" /></a>
                         </span>
 
-                        Project: <strong>ClubMaster</strong>
+                        Location: <strong>{% render "ClubUserBundle:AdminUser:getCurrentLocation" %}</strong>
 
                 </p>
 
