--- a/src/Club/ShopBundle/Resources/views/Order/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Order/index.html.twig
@@ -4,6 +4,7 @@
 
 <h1>Order</h1>
 
+<h2>Order</h2>
 {% include "::flash.html.twig" %}
 
 <form method="post" action="{{ path('shop_order_batch') }}">
