--- a/src/Club/ShopBundle/Resources/views/Shop/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<h1>Shop</h1>
+<h1>Shop ({{ location.locationName }})</h1>
 
 <p class="box"><a href="{{ path('shop_checkout') }}" class="btn-info"><span>View cart</span></a></p>
 
