Cannot add items from multiple shops.

--- a/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
@@ -4,6 +4,8 @@
 
 <h1>Shop</h1>
 
+{{ app.session.flash('notice') }}
+
 <h3>Cart</h3>
 
 {% include "ClubShopBundle:Checkout:checkouttop.html.twig" %}
