--- a/src/Club/ShopBundle/Resources/views/Shop/category.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/category.html.twig
@@ -40,7 +40,7 @@
   <tbody>
     {% for product in category.getProducts %}
     <tr>
-      <td>{{ product.productName }}</td>
+      <td><a href="{{ path('shop_product', {'id':product.id}) }}">{{ product.productName }}</a></td>
       <td>{{ product.vatPrice }}</td>
       <td><a href="{{ path('shop_product_cart', {'id':product.id}) }}"><img src="{{ asset('images/icons/16/shopping-cart-insert-icon.png') }}" alt="Put in cart" title="Put in cart" /></a></td>
     </tr>
