Added forgot password.

--- a/src/Club/MailBundle/Resources/views/Default/password_reset.html.twig
+++ b/src/Club/MailBundle/Resources/views/Default/password_reset.html.twig
@@ -1,8 +1,9 @@
-Dear NAME,
+Dear {{ user.profile.name }},
 
 You have requested to reset your password.
 
-Follow this link and you can reset your password.
+Follow the link and you can reset your password.
+http://localhost/clubmaster_v2/app_dev.php/forgot/{{ forgot.hash }}
 
 Best regards,
 ClubMaster
