--- a/src/Club/UserBundle/Resources/views/Auth/resetPassword.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/resetPassword.html.twig
@@ -29,29 +29,12 @@
                 <p class="msg error">{{ error.message }}</p>
                 {% endif %}
 
-                {% if app.session.hasFlash('notice') %}
-                <p class="msg info">{{ app.session.flash('notice') }}</p>
-                {% endif %}
-                <p class="msg info">Enter your username and password.</p>
+                <p class="msg info">Enter your new password below.</p>
 
                 <!-- Form -->
-                <form method="POST" action="{{ path('_security_check') }}">
+                <form method="POST" action="{{ path('auth_reset', {'hash':forgot.hash}) }}">
+                {{ form_widget(form) }}
                 <table class="nom nostyle">
-                        <tr>
-                                <td style="width:75px;"><label for="login-user"><strong>Username:</strong></label></td>
-                                <td><input type="text" size="45" name="_username" class="input-text" id="login-user" /></td>
-                        </tr>
-                        <tr>
-                                <td><label for="login-pass"><strong>Password:</strong></label></td>
-                                <td><input type="password" size="45" name="_password" class="input-text" id="login-pass" /></td>
-                        </tr>
-                        <tr>
-                                <td></td>
-                                <td>
-                                  <span class="f-right"><a href="{{ path('auth_forgot') }}">Forgot password?</a></span>
-                                        <span class="f-left low"><input type="checkbox" name="" value="" id="login-remember" /> <label for="login-remember">Remember me</label></span>
-                                </td>
-                        </tr>
                         <tr>
                                 <td colspan="2" class="t-right"><input type="submit" class="input-submit" value="Sign In &raquo;" /></td>
                         </tr>
