--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -51,7 +51,7 @@
                           <a href="#" rel="2col" class="styleswitch ico-col2" title="Display two columns"><img src="{{ asset('images/switcher-2col.gif') }}" alt="2 Columns" /></a>
                         </span>
 
-                        Location: <strong>{% render "ClubUserBundle:Misc:getCurrentLocation" %}</strong>
+                        {% render "ClubUserBundle:Misc:getSwitchLocation" %}
 
                 </p>
 
