Added task manager.

--- a/app/Resources/views/left_menu.html.twig
+++ b/app/Resources/views/left_menu.html.twig
@@ -19,6 +19,7 @@
       <li><a href="{{ path('admin_currency') }}">Currency</a></li>
       <li><a href="{{ path('admin_language') }}">Language</a></li>
       <li><a href="{{ path('ban') }}">Ban</a></li>
+      <li><a href="{{ path('admin_task') }}">Task</a></li>
     </ul>
   </li>
 </ul>
