--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -1,5 +1,18 @@
 {% extends "::base.html.twig" %}
 
+{% block search %}
+<!-- Search -->
+<form action="{{ path('admin_user_filter') }}" method="post" id="search">
+  <fieldset>
+    <legend>Search</legend>
+    <div id="search-options">
+      {{ form_widget(filter_form) }}
+      <p><input type="submit" value="Search" /></p>
+    </div>
+  </fieldset>
+</form>
+{% endblock %}
+
 {% block body %}
 <h1>User</h1>
 <p class="box"><a href="{{ path('admin_user_new') }}" class="btn-create"><span>Create user</span></a></p>
