--- a/app/Resources/views/left_menu.html.twig
+++ b/app/Resources/views/left_menu.html.twig
@@ -20,6 +20,7 @@
       <li><a href="{{ path('admin_language') }}">Language</a></li>
       <li><a href="{{ path('ban') }}">Ban</a></li>
       <li><a href="{{ path('admin_task') }}">Task</a></li>
+      <li><a href="{{ path('admin_log') }}">Log</a></li>
     </ul>
   </li>
 </ul>
