fixed style on switch location menu.

--- a/src/Club/UserBundle/Resources/views/Misc/switchLocation.html.twig
+++ b/src/Club/UserBundle/Resources/views/Misc/switchLocation.html.twig
@@ -1,1 +1,1 @@
-<form method="POST" action="{{ path('switch_location') }}">{{ form_widget(form) }} <input type="submit" /></form>
+<form method="POST" action="{{ path('switch_location') }}">{{ form_label(form.location) }} {{ form_widget(form.location) }} <input type="submit" /></form>
