--- a/src/Club/UserBundle/Resources/views/Auth/login.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/login.html.twig
@@ -39,11 +39,11 @@
                 <table class="nom nostyle">
                         <tr>
                                 <td style="width:75px;"><label for="login-user"><strong>Username:</strong></label></td>
-                                <td><input type="text" size="45" name="_username" class="input-text" id="login-user" /></td>
+                                <td><input type="text" style="width: 300px;" name="_username" class="input-text" id="login-user" /></td>
                         </tr>
                         <tr>
                                 <td><label for="login-pass"><strong>Password:</strong></label></td>
-                                <td><input type="password" size="45" name="_password" class="input-text" id="login-pass" /></td>
+                                <td><input type="password" style="width: 300px;" name="_password" class="input-text" id="login-pass" /></td>
                         </tr>
                         <tr>
                                 <td></td>
