--- a/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
@@ -17,10 +17,10 @@
       <td>{{ subscription.user.profile.firstName }} {{ subscription.user.profile.lastName }}</td>
       <td>{{ subscription.startDate|date('Y-m-d') }}</td>
       <td>{{ subscription.expireDate|date('Y-m-d') }}</td>
-      <td><ul>
-        <li><a href="{{ path('admin_user_subscription_expire', {'id': subscription.id}) }}">Cancel</a></li>
-        <li><a href="#">Pause</a></li>
-      </ul></td>
+      <td>
+        <a href="{{ path('admin_user_subscription_expire', {'id': subscription.id}) }}">Cancel</a>
+        <a href="#">Pause</a>
+      </td>
     </tr>
   {% else %}
     <tr>
