fixed style on admin subscription.

--- a/src/Club/UserBundle/Resources/views/AdminUser/subscription.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/subscription.html.twig
@@ -4,7 +4,7 @@
 
 <h1>Subscriptions</h1>
 
-{% include "ClubUserBundle:AdminUser:subscription_table.html.twig" with {'user': user} %}
-{% include "ClubUserBundle:AdminUser:ticket_coupon_table.html.twig" with {'user': user} %}
+{% include "ClubShopBundle:Subscription:subscription_table.html.twig" with {'user': user} %}
+{% include "ClubShopBundle:Subscription:ticket_coupon_table.html.twig" with {'user': user} %}
 
 {% endblock %}
