--- a/src/Club/ShopBundle/Resources/views/AdminShipping/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminShipping/index.html.twig
@@ -14,12 +14,13 @@
       <th>[x]</th>
       <th>Id</th>
       <th>Shipping</th>
+      <th>Price</th>
       <th>Actions</th>
     </tr>
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="4" class="arrow-01">
+      <td colspan="5" class="arrow-01">
         <select name="" class="input-text">
           <option value="">Delete selected</option>
           <option value="">Remove selected</option>
@@ -35,6 +36,7 @@
       <td><input type="checkbox" /></td>
       <td>{{ shipping.id }}</td>
       <td>{{ shipping.shippingName }}</td>
+      <td>{{ shipping.price }}</td>
       <td>
         {% include "::edit_link.html.twig" with {'url':path('admin_shop_shipping_edit', { 'id':shipping.id })} %}
         {% include "::delete_link.html.twig" with {'url':path('admin_shop_shipping_delete', { 'id':shipping.id })} %}
@@ -42,7 +44,7 @@
     </tr>
   {% else %}
   <tr>
-    <td colspan="4">There are no shippings at the time</td>
+    <td colspan="5">There are no shippings at the time</td>
   </tr>
   {% endfor %}
   </tbody>
