Fixed user form.

--- a/src/Club/UserBundle/Resources/views/AdminUser/form.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/form.html.twig
@@ -33,5 +33,6 @@
     <p>{{ form_row(form.profile.profile_phone.0.number) }}</p>
   </fieldset>
 
+  {{ form_row(form._token) }}
   {% include "::submit_button.html.twig" %}
 
