--- a/app/Resources/views/top_menu.html.twig
+++ b/app/Resources/views/top_menu.html.twig
@@ -8,5 +8,6 @@
   <li {% if app.request.attributes.get('_route') == 'order' %} id="menu-active"{% endif %}><a href="{{ path('shop_order') }}"><span>Order</span></a></li>
   <li {% if app.request.attributes.get('_route') == 'ledger' %} id="menu-active"{% endif %}><a href="{{ path('account_ledger') }}"><span>Ledger</span></a></li>
   <li {% if app.request.attributes.get('_route') == 'subscription' %} id="menu-active"{% endif %}><a href="{{ path('shop_subscription') }}"><span>Subscription</span></a></li>
+  <li {% if app.request.attributes.get('_route') == 'event' %} id="menu-active"{% endif %}><a href="{{ path('event_event') }}"><span>Event</span></a></li>
 </ul>
 
